{
  "version": 4,
  "terraform_version": "1.0.3",
  "serial": 64,
  "lineage": "c5b7b813-ef0b-c0ef-e50a-0c987ac9bc44",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:740320335608:loadbalancer/net/demo/069b6288f0471556",
            "arn_suffix": "net/demo/069b6288f0471556",
            "dns_name": "demo-069b6288f0471556.elb.ap-northeast-2.amazonaws.com",
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:740320335608:loadbalancer/net/demo/069b6288f0471556",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "demo",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-05fcd81ecef59a990"
              },
              {
                "subnet_id": "subnet-06fa7ddd4ea0c3b75"
              },
              {
                "subnet_id": "subnet-0a3e486f6e6f85d0e"
              }
            ],
            "subnets": [
              "subnet-05fcd81ecef59a990",
              "subnet-06fa7ddd4ea0c3b75",
              "subnet-0a3e486f6e6f85d0e"
            ],
            "vpc_id": "vpc-029464e95c15f57b0",
            "zone_id": "ZIBE1TIR4HY56"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:740320335608:listener/net/demo/069b6288f0471556/995ff7a37a4645f0",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:740320335608:targetgroup/demo-http-green/5fc5c670accd62d5",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:740320335608:listener/net/demo/069b6288f0471556/995ff7a37a4645f0",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:740320335608:loadbalancer/net/demo/069b6288f0471556",
            "port": 80,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb_target_group.demo-blue",
            "data.aws_availability_zones.available",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "aws_lb.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "demo-blue",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:740320335608:targetgroup/demo-http-blue/c28ea17dd1e777f5",
            "arn_suffix": "targetgroup/demo-http-blue/c28ea17dd1e777f5",
            "deregistration_delay": 30,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:740320335608:targetgroup/demo-http-blue/c28ea17dd1e777f5",
            "lambda_multi_value_headers_enabled": false,
            "name": "demo-http-blue",
            "port": 3000,
            "preserve_client_ip": "false",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-029464e95c15f57b0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "demo-green",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:740320335608:targetgroup/demo-http-green/5fc5c670accd62d5",
            "arn_suffix": "targetgroup/demo-http-green/5fc5c670accd62d5",
            "deregistration_delay": 30,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:740320335608:targetgroup/demo-http-green/5fc5c670accd62d5",
            "lambda_multi_value_headers_enabled": false,
            "name": "demo-http-green",
            "port": 3000,
            "preserve_client_ip": "false",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-029464e95c15f57b0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-mysqldb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:740320335608:security-group/sg-0b256842a10fc6e25",
            "description": "allow-mysqldb",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b256842a10fc6e25",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e4b4ca0271985176"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "allow-mysqldb",
            "name_prefix": "",
            "owner_id": "740320335608",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow-mysqldb"
            },
            "tags_all": {
              "Name": "allow-mysqldb"
            },
            "timeouts": null,
            "vpc_id": "vpc-029464e95c15f57b0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ecs-demo",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs-demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:740320335608:security-group/sg-0e4b4ca0271985176",
            "description": "ECS demo",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e4b4ca0271985176",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "ECS demo",
            "name_prefix": "",
            "owner_id": "740320335608",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-029464e95c15f57b0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:740320335608:internet-gateway/igw-0de2ad26effd8bfa7",
            "id": "igw-0de2ad26effd8bfa7",
            "owner_id": "740320335608",
            "tags": {
              "Name": "terraform-cloudpipeline-demo"
            },
            "tags_all": {
              "Name": "terraform-cloudpipeline-demo"
            },
            "vpc_id": "vpc-029464e95c15f57b0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0de2ad26effd8bfa7",
            "id": "r-rtb-020e4d868d58c77e11080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-020e4d868d58c77e1",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:740320335608:route-table/rtb-0d762459d31998a50",
            "id": "rtb-0d762459d31998a50",
            "owner_id": "740320335608",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "terraform-cloudpipeline-demo"
            },
            "tags_all": {
              "Name": "terraform-cloudpipeline-demo"
            },
            "vpc_id": "vpc-029464e95c15f57b0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:740320335608:route-table/rtb-084f67c0b193614bb",
            "id": "rtb-084f67c0b193614bb",
            "owner_id": "740320335608",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "terraform-cloudpipeline-demo"
            },
            "tags_all": {
              "Name": "terraform-cloudpipeline-demo"
            },
            "vpc_id": "vpc-029464e95c15f57b0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:740320335608:route-table/rtb-067fe24f8dbd325a0",
            "id": "rtb-067fe24f8dbd325a0",
            "owner_id": "740320335608",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "terraform-cloudpipeline-demo"
            },
            "tags_all": {
              "Name": "terraform-cloudpipeline-demo"
            },
            "vpc_id": "vpc-029464e95c15f57b0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:740320335608:route-table/rtb-020e4d868d58c77e1",
            "id": "rtb-020e4d868d58c77e1",
            "owner_id": "740320335608",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0de2ad26effd8bfa7",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform-cloudpipeline-demo"
            },
            "tags_all": {
              "Name": "terraform-cloudpipeline-demo"
            },
            "vpc_id": "vpc-029464e95c15f57b0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-087aa0a02af540089",
            "route_table_id": "rtb-0d762459d31998a50",
            "subnet_id": "subnet-010eb2564f9ca782b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06cc138594ee5ca89",
            "route_table_id": "rtb-084f67c0b193614bb",
            "subnet_id": "subnet-040bb97dfca39d9a4"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b4b827a8f2b42ab0",
            "route_table_id": "rtb-067fe24f8dbd325a0",
            "subnet_id": "subnet-00ff6b01f458009b6"
          },
          "dependencies": [
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0abf1781f678dc64f",
            "route_table_id": "rtb-020e4d868d58c77e1",
            "subnet_id": "subnet-06fa7ddd4ea0c3b75"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05d1c78f315766a3d",
            "route_table_id": "rtb-020e4d868d58c77e1",
            "subnet_id": "subnet-0a3e486f6e6f85d0e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00a3c53f842430776",
            "route_table_id": "rtb-020e4d868d58c77e1",
            "subnet_id": "subnet-05fcd81ecef59a990"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:740320335608:subnet/subnet-010eb2564f9ca782b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-010eb2564f9ca782b",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "740320335608",
            "tags": {
              "Name": "terraform-cloudpipeline-demo"
            },
            "tags_all": {
              "Name": "terraform-cloudpipeline-demo"
            },
            "vpc_id": "vpc-029464e95c15f57b0"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:740320335608:subnet/subnet-040bb97dfca39d9a4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-040bb97dfca39d9a4",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "740320335608",
            "tags": {
              "Name": "terraform-cloudpipeline-demo"
            },
            "tags_all": {
              "Name": "terraform-cloudpipeline-demo"
            },
            "vpc_id": "vpc-029464e95c15f57b0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:740320335608:subnet/subnet-00ff6b01f458009b6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-00ff6b01f458009b6",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "740320335608",
            "tags": {
              "Name": "terraform-cloudpipeline-demo"
            },
            "tags_all": {
              "Name": "terraform-cloudpipeline-demo"
            },
            "vpc_id": "vpc-029464e95c15f57b0"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:740320335608:subnet/subnet-06fa7ddd4ea0c3b75",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.101.0/24",
            "id": "subnet-06fa7ddd4ea0c3b75",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "740320335608",
            "tags": {
              "Name": "terraform-cloudpipeline-demo"
            },
            "tags_all": {
              "Name": "terraform-cloudpipeline-demo"
            },
            "vpc_id": "vpc-029464e95c15f57b0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:740320335608:subnet/subnet-0a3e486f6e6f85d0e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.102.0/24",
            "id": "subnet-0a3e486f6e6f85d0e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "740320335608",
            "tags": {
              "Name": "terraform-cloudpipeline-demo"
            },
            "tags_all": {
              "Name": "terraform-cloudpipeline-demo"
            },
            "vpc_id": "vpc-029464e95c15f57b0"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:740320335608:subnet/subnet-05fcd81ecef59a990",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.103.0/24",
            "id": "subnet-05fcd81ecef59a990",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "740320335608",
            "tags": {
              "Name": "terraform-cloudpipeline-demo"
            },
            "tags_all": {
              "Name": "terraform-cloudpipeline-demo"
            },
            "vpc_id": "vpc-029464e95c15f57b0"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:740320335608:vpc/vpc-029464e95c15f57b0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09d9cd37b77dcfc0f",
            "default_route_table_id": "rtb-037ac49d6b8474886",
            "default_security_group_id": "sg-01f1ddb59da728d3f",
            "dhcp_options_id": "dopt-2700414c",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-029464e95c15f57b0",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-037ac49d6b8474886",
            "owner_id": "740320335608",
            "tags": {
              "Name": "terraform-cloudpipeline-demo"
            },
            "tags_all": {
              "Name": "terraform-cloudpipeline-demo"
            }
          }
        }
      ]
    }
  ]
}